--- a/fop.html
+++ b/fop.html
@@ -1,102 +1,61 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Firma Outlook Android</title>
-    <style>
-      body {
-        font-family: 'Montserrat', Arial, sans-serif;
-        background: #fff;
-        padding: 2rem;
-      }
-      table {
-        font-family: 'Montserrat', Arial, sans-serif;
-      }
-    </style>
-  </head>
-  <body>
-    <table style="width: 595px; color: #333;" cellpadding="0" cellspacing="0" border="0">
-      <tr><td>
-        <table style="width: 570px;" cellpadding="0" cellspacing="0" border="0">
-          <tr><td><a href="https://www.dulmatesa.es" target="_blank">
-            <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" width="190" style="display: block; margin-bottom: 10px;">
-          </a></td></tr>
-          <tr><td height="5" style="line-height:5px; font-size:1px;">&nbsp;</td></tr>
-          <tr><td style="line-height: 13px; font-size: 11pt; color: #133850;"><strong>Alejandro Silva</strong></td></tr>
-          <tr><td style="line-height: 12px; font-size: 10pt; color: #133850;"><strong>Responsable de Departamento IT</strong></td></tr>
-          <tr><td style="line-height: 18px; font-size: 9pt; color: #133850;">Oficinas Centrales / HQ</td></tr>
-        </table>
-
-        <table cellpadding="0" cellspacing="0" border="0"><tr><td height="10" style="line-height:10px; font-size:1px;">&nbsp;</td></tr></table>
-
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tr>
-            <td style="padding-right: 7px; vertical-align: middle;">
-              <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Teléfono" style="display: block;">
-            </td>
-            <td style="font-size: 9pt; color: #828282; vertical-align: middle; line-height: 14px;">
-              <a href="tel:636514538" style="color: #828282; font-size: 9pt; text-decoration: none;">636514538</a>
-            </td>
-          </tr>
-          <tr><td colspan="2" height="6"></td></tr>
-          <tr>
-            <td style="padding-right: 6px; vertical-align: middle;">
-              <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Correo" style="display: block;">
-            </td>
-            <td style="font-size: 9pt; color: #828282; vertical-align: middle; line-height: 14px;">
-              <a href="mailto:alejandro.silva@dulmatesa.es" style="color: #828282; font-size: 9pt; text-decoration: none;">alejandro.silva@dulmatesa.es</a>
-            </td>
-          </tr>
-          <tr><td colspan="2" height="6"></td></tr>
-          <tr>
-            <td style="padding-right: 7px; vertical-align: middle;">
-              <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dirección" style="display:block;">
-            </td>
-            <td style="font-size: 9pt; color: #828282; vertical-align: middle; line-height: 14px;">
-              C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga
-            </td>
-          </tr>
-          <tr><td colspan="2" height="6"></td></tr>
-          <tr>
-            <td style="padding-right: 5px; vertical-align: middle;">
-              <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Nueva web de Dulmatesa" width="18" style="display: block;">
-            </td>
-            <td style="font-size: 10pt; color: #0C96D4; vertical-align: middle; line-height: 16px;">
-              <a href="https://www.dulmatesa.es" style="color: #0C96D4; font-size: 10pt; font-weight: bold; text-decoration: none;">Visita nuestra web: www.dulmatesa.es</a>
-            </td>
-          </tr>
-        </table>
-
-        <table width="570" cellpadding="0" cellspacing="0" border="0" style="margin-top: 10px;">
-          <tr>
-            <td height="2" style="background-color: #0C96D4; line-height: 2px; font-size: 1px;">&nbsp;</td>
-          </tr>
-        </table>
-
-        <table cellpadding="0" cellspacing="0" border="0" style="margin-top: 10px;">
-          <tr>
-            <td style="padding-right: 10px;"><img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" width="100" style="display: block;"></td>
-            <td><img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" width="100" style="display: block;"></td>
-          </tr>
-        </table>
-
-        <table width="570" cellpadding="0" cellspacing="0" border="0" style="margin-top: 15px;">
-          <tr>
-            <td width="20"><img src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" width="20" style="vertical-align: middle;"></td>
-            <td style="font-size: 8pt; color: #878787; padding-left: 5px;">Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.</td>
-          </tr>
-        </table>
-
-        <table width="570" cellpadding="0" cellspacing="0" border="0">
-          <tr>
-            <td style="font-size: 8pt; color: #878787; padding-top: 10px;">
-              AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre... 
-              Puede ejercer sus derechos en: <a href="mailto:lopd@dulmatesa.es" style="color: #0C96D4; text-decoration: none;">lopd@dulmatesa.es</a>
-            </td>
-          </tr>
-        </table>
-      </td></tr>
+  <body style="margin:0; padding:0; font-family: Arial, sans-serif; background:#ffffff;">
+    <table cellpadding="0" cellspacing="0" border="0" style="width: 100%; max-width: 570px; font-family: Arial, sans-serif;">
+      <tr>
+        <td><a href="https://www.dulmatesa.es" target="_blank">
+          <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" width="190" style="display: block; margin-bottom: 10px;">
+        </a></td>
+      </tr>
+      <tr><td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro Silva</td></tr>
+      <tr><td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable de Departamento IT</td></tr>
+      <tr><td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td></tr>
+      <tr><td height="10"></td></tr>
+      <tr>
+        <td style="font-size: 12px; color: #828282;">
+          <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" width="16" style="vertical-align: middle;">&nbsp;
+          <a href="tel:636514538" style="color: #828282; text-decoration: none;">636514538</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="font-size: 12px; color: #828282;">
+          <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" width="16" style="vertical-align: middle;">&nbsp;
+          <a href="mailto:alejandro.silva@dulmatesa.es" style="color: #828282; text-decoration: none;">alejandro.silva@dulmatesa.es</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="font-size: 12px; color: #828282;">
+          <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir" width="16" style="vertical-align: middle;">&nbsp;
+          C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga
+        </td>
+      </tr>
+      <tr>
+        <td style="font-size: 12px; color: #0C96D4;">
+          <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" width="16" style="vertical-align: middle;">&nbsp;
+          <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold;">Visita nuestra web</a>
+        </td>
+      </tr>
+      <tr><td height="10" style="border-bottom: 2px solid #0C96D4;"></td></tr>
+      <tr><td height="10"></td></tr>
+      <tr>
+        <td>
+          <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" width="100">
+          <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" width="100">
+        </td>
+      </tr>
+      <tr><td height="10"></td></tr>
+      <tr>
+        <td style="font-size: 10px; color: #878787;">
+          <img src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" width="16" style="vertical-align: middle;">&nbsp;
+          Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.
+        </td>
+      </tr>
+      <tr>
+        <td style="font-size: 10px; color: #878787; padding-top: 10px;">
+          AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre... 
+          Puede ejercer sus derechos en: <a href="mailto:lopd@dulmatesa.es" style="color: #0C96D4; text-decoration: none;">lopd@dulmatesa.es</a>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
