--- a/fop.html
+++ b/fop.html
@@ -11,36 +11,43 @@
       <tr><td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable de Departamento IT</td></tr>
       <tr><td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td></tr>
       <tr><td height="10"></td></tr>
+
       <tr>
-        <td style="font-size: 12px; color: #828282;">
-          <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" width="16" style="vertical-align: middle;">&nbsp;
-          <a href="tel:636514538" style="color: #828282; text-decoration: none;">636514538</a>
+        <td>
+          <table cellpadding="0" cellspacing="0" border="0" style="font-size: 12px; color: #828282;">
+            <tr>
+              <td><img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" width="16" style="vertical-align: middle;">&nbsp;
+                <a href="tel:636514538" style="color: #828282; text-decoration: none;">636514538</a>
+              </td>
+            </tr>
+            <tr><td height="6"></td></tr>
+            <tr>
+              <td><img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" width="16" style="vertical-align: middle;">&nbsp;
+                <a href="mailto:alejandro.silva@dulmatesa.es" style="color: #828282; text-decoration: none;">alejandro.silva@dulmatesa.es</a>
+              </td>
+            </tr>
+            <tr><td height="6"></td></tr>
+            <tr>
+              <td><img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir" width="16" style="vertical-align: middle;">&nbsp;
+                C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga
+              </td>
+            </tr>
+            <tr><td height="6"></td></tr>
+            <tr>
+              <td><img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" width="16" style="vertical-align: middle;">&nbsp;
+                <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold;">Visita nuestra web</a>
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
-      <tr>
-        <td style="font-size: 12px; color: #828282;">
-          <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" width="16" style="vertical-align: middle;">&nbsp;
-          <a href="mailto:alejandro.silva@dulmatesa.es" style="color: #828282; text-decoration: none;">alejandro.silva@dulmatesa.es</a>
-        </td>
-      </tr>
-      <tr>
-        <td style="font-size: 12px; color: #828282;">
-          <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir" width="16" style="vertical-align: middle;">&nbsp;
-          C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga
-        </td>
-      </tr>
-      <tr>
-        <td style="font-size: 12px; color: #0C96D4;">
-          <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" width="16" style="vertical-align: middle;">&nbsp;
-          <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold;">Visita nuestra web</a>
-        </td>
-      </tr>
+
       <tr><td height="10" style="border-bottom: 2px solid #0C96D4;"></td></tr>
       <tr><td height="10"></td></tr>
       <tr>
         <td>
-          <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" width="100">
-          <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" width="100">
+          <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" width="100" style="display: inline-block; margin-right: 10px;">
+          <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" width="100" style="display: inline-block;">
         </td>
       </tr>
       <tr><td height="10"></td></tr>
