--- a/fop.html
+++ b/fop.html
@@ -25,7 +25,7 @@
           <td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td>
         </tr>
         <tr>
-          <td height="20">
+          <td height="15">
           </td>
         </tr>
         <tr>
@@ -63,7 +63,7 @@
 
                       style="vertical-align: middle;" width="16">&nbsp; C/ Jaén,
                     9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga
-                    Nostrum, 29004, Málaga </td>
+                    Nostrum, 29004, Málaga</td>
                 </tr>
                 <tr>
                   <td height="10">
@@ -75,18 +75,18 @@
                       style="vertical-align: middle;" width="16">&nbsp; <a href="https://www.dulmatesa.es"
 
                       style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px">Visita
-                      nuestra web</a> </td>
+                      nuestra web: www.dulmatesa.es</a> </td>
                 </tr>
               </tbody>
             </table>
           </td>
         </tr>
         <tr>
-          <td style="border-bottom: 2px solid #0C96D4;" height="10"><br>
+          <td style="border-bottom: 2px solid #0C96D4;" height="10">
           </td>
         </tr>
         <tr>
-          <td height="10"><br>
+          <td height="10">
           </td>
         </tr>
         <tr>
@@ -99,7 +99,7 @@
               style="display: inline-block;" width="100"> </td>
         </tr>
         <tr>
-          <td height="10"><br>
+          <td height="10">
           </td>
         </tr>
         <tr>
