--- a/fop.html
+++ b/fop.html
@@ -1,121 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
   <body style="margin:0; padding:0; font-family: Montserrat, Arial, sans-serif; background:#ffffff;">
-    <table style="width: 100%; max-width: 570px; font-family: Montserrat, Arial, sans-serif;"
-
-      cellspacing="0" cellpadding="0" border="0">
-      <tbody>
-        <tr>
-          <td><a href="https://www.dulmatesa.es" target="_blank"> <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png"
-
-                alt="Logo" style="display: block; margin-bottom: 20px;" width="190">
-            </a></td>
-        </tr>
-        <tr>
-          <td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro
-            Silva</td>
-        </tr>
-        <tr>
-          <td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable
-            de Departamento IT</td>
-        </tr>
-        <tr>
-          <td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td>
-        </tr>
-        <tr>
-          <td height="15pt">
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <table style="font-size: 12px; color: #828282;" cellspacing="0" cellpadding="0"
-
-              border="0">
-              <tbody>
-                <tr>
-                  <td><img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel"
-
-                      style="vertical-align: middle;" width="16">&nbsp; <a href="tel:636514538"
-
-                      style="color: #828282; text-decoration: none;">636514538</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td height="6pt">
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email"
-
-                      style="vertical-align: middle;" width="16">&nbsp; <a href="mailto:alejandro.silva@dulmatesa.es"
-
-                      style="color: #828282; text-decoration: none;">alejandro.silva@dulmatesa.es</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td height="10pt">
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir"
-
-                      style="vertical-align: middle;" width="16">&nbsp; C/ Jaén,
-                    9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga
-                    Nostrum, 29004, Málaga</td>
-                </tr>
-                <tr>
-                  <td height="10pt">
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web"
-
-                      style="vertical-align: middle;" width="16">&nbsp; <a href="https://www.dulmatesa.es"
-
-                      style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px">Visita
-                      nuestra web: www.dulmatesa.esss</a> </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-bottom: 2px solid #0C96D4;" height="10">
-          </td>
-        </tr>
-        <tr>
-          <td height="10pt">
-          </td>
-        </tr>
-        <tr>
-          <td> <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López"
-
-              style="display: inline-block; margin-right: 10px;" width="100"> <img
-
-              src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López"
-
-              style="display: inline-block;" width="100"> </td>
-        </tr>
-        <tr>
-          <td height="10pt">
-          </td>
-        </tr>
-        <tr>
-          <td style="font-size: 10px; color: #878787;"> <img src="https://www.dulmatesa.es/img/reciclado.png"
-
-              alt="Reciclado" style="vertical-align: middle;" width="16">&nbsp;
-            Cuidemos el medio ambiente. Por favor no imprima este e-mail si no
-            es necesario. </td>
-        </tr>
-        <tr>
-          <td style="font-size: 10px; color: #878787; padding-top: 10px;"> AVISO
-            LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...
-            Puede ejercer sus derechos en: <a href="mailto:lopd@dulmatesa.es" style="color: #0C96D4; text-decoration: none;">lopd@dulmatesa.es</a>
-          </td>
-        </tr>
-      </tbody>
+    <table style="width: 100%; max-width: 570px; font-family: Montserrat, Arial, sans-serif;" cellspacing="0" cellpadding="0" border="0">
+      <tr>
+        <td>
+          <a href="https://www.dulmatesa.es" target="_blank">
+            <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" style="display: block; margin-bottom: 20px;" width="190">
+          </a>
+        </td>
+      </tr>
+      <tr><td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro Silva</td></tr>
+      <tr><td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable de Departamento IT</td></tr>
+      <tr><td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td></tr>
+      <tr><td style="height: 15px;"></td></tr>
+      <tr>
+        <td>
+          <table style="font-size: 12px; color: #828282;" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" style="vertical-align: middle;" width="16">&nbsp;
+                <a href="tel:636514538" style="text-decoration: none;"><font color="#828282">636514538</font></a>
+              </td>
+            </tr>
+            <tr><td style="height: 6px;"></td></tr>
+            <tr>
+              <td>
+                <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" style="vertical-align: middle;" width="16">&nbsp;
+                <a href="mailto:alejandro.silva@dulmatesa.es" style="text-decoration: none;"><font color="#828282">alejandro.silva@dulmatesa.es</font></a>
+              </td>
+            </tr>
+            <tr><td style="height: 6px;"></td></tr>
+            <tr>
+              <td>
+                <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir" style="vertical-align: middle;" width="16">&nbsp;
+                <font color="#828282">C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga</font>
+              </td>
+            </tr>
+            <tr><td style="height: 6px;"></td></tr>
+            <tr>
+              <td>
+                <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" style="vertical-align: middle;" width="16">&nbsp;
+                <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr><td style="height: 10px; border-bottom: 2px solid #0C96D4;"></td></tr>
+      <tr><td style="height: 10px;"></td></tr>
+      <tr>
+        <td>
+          <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" style="display: inline-block; margin-right: 10px;" width="100">
+          <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" style="display: inline-block;" width="100">
+        </td>
+      </tr>
+      <tr><td style="height: 10px;"></td></tr>
+      <tr>
+        <td style="font-size: 10px; color: #878787;">
+          <img src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" style="vertical-align: middle;" width="16">&nbsp;
+          Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.
+        </td>
+      </tr>
+      <tr>
+        <td style="font-size: 10px; color: #878787; padding-top: 10px;">
+          AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...
+          Puede ejercer sus derechos en: <a href="mailto:lopd@dulmatesa.es" style="text-decoration: none;"><font color="#0C96D4">lopd@dulmatesa.es</font></a>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
