--- a/fop.html
+++ b/fop.html
@@ -40,7 +40,7 @@
             <tr>
               <td>
                 <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" style="vertical-align: middle;" width="16">&nbsp;
-                <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.es</font></a>
+                <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.ez</font></a>
               </td>
             </tr>
           </table>
