--- a/fop.html
+++ b/fop.html
@@ -4,9 +4,7 @@
     <table style="width: 100%; max-width: 570px; font-family: Montserrat, Arial, sans-serif;" cellspacing="0" cellpadding="0" border="0">
       <tr>
         <td>
-          <a href="https://www.dulmatesa.es" target="_blank">
-            <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" style="display: block; margin-bottom: 20px;" width="190">
-          </a>
+          <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" style="display: block; margin-bottom: 20px;" width="190">
         </td>
       </tr>
       <tr><td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro Silva</td></tr>
@@ -19,14 +17,14 @@
             <tr>
               <td>
                 <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" style="vertical-align: middle;" width="16">&nbsp;
-                <a href="tel:636514538" style="text-decoration: none;"><font color="#828282">636514538</font></a>
+                <font color="#828282">636514538</font>
               </td>
             </tr>
             <tr><td style="height: 6px;"></td></tr>
             <tr>
               <td>
                 <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" style="vertical-align: middle;" width="16">&nbsp;
-                <a href="mailto:alejandro.silva@dulmatesa.es" style="text-decoration: none;"><font color="#828282">alejandro.silva@dulmatesa.es</font></a>
+                <font color="#828282">alejandro.silva@dulmatesa.es</font>
               </td>
             </tr>
             <tr><td style="height: 6px;"></td></tr>
@@ -40,7 +38,7 @@
             <tr>
               <td>
                 <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" style="vertical-align: middle;" width="16">&nbsp;
-                <a href="https://www.dulmatesa.es" style="color: #0C96D4; text-decoration: none; font-weight: bold; font-size: 13px;"><font color="#0C96D4">Visita nuestra web: www.dulmatesa.ez</font></a>
+                <font color="#0C96D4" style="font-weight: bold; font-size: 13px;">Visita nuestra web: www.dulmatesa.es</font>
               </td>
             </tr>
           </table>
@@ -63,8 +61,8 @@
       </tr>
       <tr>
         <td style="font-size: 10px; color: #878787; padding-top: 10px;">
-          AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...
-          Puede ejercer sus derechos en: <a href="mailto:lopd@dulmatesa.es" style="text-decoration: none;"><font color="#0C96D4">lopd@dulmatesa.es</font></a>
+          AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...  
+          Puede ejercer sus derechos en: lopd@dulmatesa.es
         </td>
       </tr>
     </table>
