--- a/fop.html
+++ b/fop.html
@@ -1,70 +1,114 @@
 <!DOCTYPE html>
 <html>
-  <body style="margin:0; padding:0; font-family: Montserrat, Arial, sans-serif; background:#ffffff;">
-    <table style="width: 100%; max-width: 570px; font-family: Montserrat, Arial, sans-serif;" cellspacing="0" cellpadding="0" border="0">
-      <tr>
-        <td>
-          <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo" style="display: block; margin-bottom: 20px;" width="190">
-        </td>
-      </tr>
-      <tr><td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro Silva</td></tr>
-      <tr><td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable de Departamento IT</td></tr>
-      <tr><td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td></tr>
-      <tr><td style="height: 15px;"></td></tr>
-      <tr>
-        <td>
-          <table style="font-size: 12px; color: #828282;" cellspacing="0" cellpadding="0" border="0">
-            <tr>
-              <td>
-                <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel" style="vertical-align: middle;" width="16">&nbsp;
-                <font color="#828282">636514538</font>
-              </td>
-            </tr>
-            <tr><td style="height: 6px;"></td></tr>
-            <tr>
-              <td>
-                <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email" style="vertical-align: middle;" width="16">&nbsp;
-                <font color="#828282">alejandro.silva@dulmatesa.es</font>
-              </td>
-            </tr>
-            <tr><td style="height: 6px;"></td></tr>
-            <tr>
-              <td>
-                <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir" style="vertical-align: middle;" width="16">&nbsp;
-                <font color="#828282">C/ Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial Málaga Nostrum, 29004, Málaga</font>
-              </td>
-            </tr>
-            <tr><td style="height: 6px;"></td></tr>
-            <tr>
-              <td>
-                <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web" style="vertical-align: middle;" width="16">&nbsp;
-                <font color="#0C96D4" style="font-weight: bold; font-size: 13px;">Visita nuestra web: www.dulmatesa.es</font>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr><td style="height: 10px; border-bottom: 2px solid #0C96D4;"></td></tr>
-      <tr><td style="height: 10px;"></td></tr>
-      <tr>
-        <td>
-          <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López" style="display: inline-block; margin-right: 10px;" width="100">
-          <img src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López" style="display: inline-block;" width="100">
-        </td>
-      </tr>
-      <tr><td style="height: 10px;"></td></tr>
-      <tr>
-        <td style="font-size: 10px; color: #878787;">
-          <img src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" style="vertical-align: middle;" width="16">&nbsp;
-          Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.
-        </td>
-      </tr>
-      <tr>
-        <td style="font-size: 10px; color: #878787; padding-top: 10px;">
-          AVISO LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...  
-          Puede ejercer sus derechos en: lopd@dulmatesa.es
-        </td>
-      </tr>
+  <head>
+  </head>
+  <body style="  margin:0; padding:0; font-family: Montserrat, Arial, sans-serif; background:#ffffff;">
+    <table style="width: 100%; max-width: 570px; font-family: Montserrat, Arial, sans-serif;"
+
+      cellspacing="0" cellpadding="0" border="0">
+      <tbody>
+        <tr>
+          <td> <img src="https://www.dulmatesa.es/img/dulmatesa-logo.png" alt="Logo"
+
+              style="display: block; margin-bottom: 20px;" width="190">
+            </td> </tr>
+        <tr>
+          <td style="font-size: 14px; font-weight: bold; color: #133850;">Alejandro
+            Silva</td>
+        </tr>
+        <tr>
+          <td style="font-size: 13px; font-weight: bold; color: #133850;">Responsable
+            de Departamento IT</td>
+        </tr>
+        <tr>
+          <td style="font-size: 12px; color: #133850;">Oficinas Centrales / HQ</td>
+        </tr>
+        <tr>
+          <td style="height: 15px;"><br>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <table style="font-size: 12px; color: #828282;" cellspacing="0" cellpadding="0"
+
+              border="0">
+              <tbody>
+                <tr>
+                  <td> <img src="https://www.dulmatesa.es/img/telf-dulma.png" alt="Tel"
+
+                      style="vertical-align: middle;" width="16">&nbsp; <font color="#828282">636514538</font>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 6px;"> <br>
+                  </td>
+                </tr>
+                <tr>
+                  <td> <img src="https://www.dulmatesa.es/img/mail-dulma.png" alt="Email"
+
+                      style="vertical-align: middle;" width="16">&nbsp; <font color="#828282">alejandro.silva@dulmatesa.es</font>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 0px;"> <br>
+                  </td>
+                </tr>
+                <tr>
+                  <td> <img src="https://www.dulmatesa.es/img/ubi-dulma.png" alt="Dir"
+
+                      style="vertical-align: middle;" width="16">&nbsp; <font color="#828282">C/
+                      Jaén, 9. Edificio Galia, 3º Of. 14, Parque Comercial
+                      Málaga Nostrum, 29004, Málaga</font> </td>
+                </tr>
+                <tr>
+                  <td style="height: 0px;"> <br>
+                  </td>
+                </tr>
+                <tr>
+                  <td> <img src="https://www.dulmatesa.es/img/nueva-web.png" alt="Web"
+
+                      style="vertical-align: middle;" width="16">&nbsp; <font style="font-weight: bold; font-size: 13px;"
+
+                      color="#0C96D4">Visita nuestra web</font> </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td style="height: 10px; border-bottom: 2px solid #0C96D4;"><br>
+          </td>
+        </tr>
+        <tr>
+          <td style="height: 10px;"><br>
+          </td>
+        </tr>
+        <tr>
+          <td> <img src="https://www.dulmatesa.es/img/lopez.png" alt="Productos López"
+
+              style="display: inline-block; margin-right: 10px;" width="100"> <img
+
+              src="https://www.dulmatesa.es/img/productoslopez.png" alt="Productos López"
+
+              style="display: inline-block;" width="100"> </td>
+        </tr>
+        <tr>
+          <td style="height: 10px;"><br>
+          </td>
+        </tr>
+        <tr>
+          <td style="font-size: 10px; color: #878787;"> <img src="https://www.dulmatesa.es/img/reciclado.png"
+
+              alt="Reciclado" style="vertical-align: middle;" width="16">&nbsp;
+            Cuidemos el medio ambiente. Por favor no imprima este e-mail si no
+            es necesario. </td>
+        </tr>
+        <tr>
+          <td style="font-size: 10px; color: #878787; padding-top: 10px;"> AVISO
+            LEGAL: En virtud de la Ley Orgánica 3/2018, de 5 de diciembre...
+            Puede ejercer sus derechos en: lopd@dulmatesa.es </td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
