--- a/fop.html
+++ b/fop.html
@@ -68,7 +68,7 @@
 
                       style="vertical-align: middle;" width="16">&nbsp; <font style="font-weight: bold; font-size: 13px;"
 
-                      color="#0C96D4">Visita nuestra web</font> </td>
+                      color="#0C96D4">Visita nuestra webz</font> </td>
                 </tr>
               </tbody>
             </table>
