--- a/index.html
+++ b/index.html
@@ -945,6 +945,104 @@
 
           // Código HTML generado 
           const signatureHTML = `
+    <style>
+        .blue-text {
+            color: #0000ff;
+        }
+
+    /* Estilos responsivos */
+    @media screen and (max-width: 768px) {
+    
+    .container {
+            display: flex;
+            gap: 20px;
+            max-width: 100%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
+        }
+
+    body {
+        font-family: 'Montserrat', sans-serif;
+        background-color: #ffffff;
+    }
+    .container {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .form-section,
+    .preview-section {
+        margin: 0;
+        max-width: 100%;
+        border: 0px;
+    }
+
+    .form-section input,
+    .form-section select,
+    .form-section button {
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 28px;
+        line-height: 29px;
+    }
+
+    input, select {
+        font-size: 14px;
+    }
+
+    .preview-container {
+        width: 98%;
+        padding: 0;
+        border: 0px;
+    }
+}
+
+    @media screen and (max-width: 480px) {
+    
+    .container {
+            display: flex;
+            gap: 20px;
+            max-width: 100%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
+        }
+
+    body {
+        font-family: 'Montserrat', sans-serif;
+        background-color: #ffffff;
+    }
+
+    h1 {
+        font-size: 25px;
+        line-height: 26px;
+    }
+
+    .form-section input,
+    .form-section select,
+    .form-section button {
+        font-size: 12px;
+    }
+
+    input, select {
+        padding: 8px;
+    }
+
+    .preview-container {
+        width: 98%;
+        padding: 5px;
+    }
+
+    .copy-button {
+        font-size: 14px;
+    }
+}
+    </style>
 
                 <span style="font-family: 'Montserrat', sans-serif;">${saludo}</span>
                 <div style="font-family: 'Montserrat', sans-serif; color: #333; width: 595px;">
